--- a/src/legends/modules/leaderboard/screens/Leaderboard/Leaderboard.module.scss
+++ b/src/legends/modules/leaderboard/screens/Leaderboard/Leaderboard.module.scss
@@ -102,6 +102,17 @@
     background-color: $neutral-700;
     padding: 1rem;
     border-radius: 1rem;
+
+    &.season0 {
+      .header,
+      .row {
+        .cell {
+          &:nth-child(2) {
+            flex: 0.75;
+          }
+        }
+      }
+    }
   }
 
   .header,
@@ -119,18 +130,14 @@
     .cell {
       display: flex;
       align-content: center;
+      flex: 1;
 
       &:first-child {
-        flex: 5;
+        flex: 3;
       }
 
-      &:nth-child(2),
-      &:nth-child(3) {
-        flex: 1.5;
-      }
       &:last-child {
         text-align: right;
-        flex: 1;
         justify-content: flex-end;
       }
 
@@ -141,14 +148,6 @@
         margin-right: 0.25rem;
         color: rgba($neutral-600, 0.639);
       }
-
-      .reward {
-        flex: 1;
-      }
-
-      .dollarReward {
-        flex: 1;
-      }
     }
   }
   .header {
@@ -158,14 +157,10 @@
       font-size: 0.875rem;
       font-weight: 600;
       color: rgba($tertiaryText, 0.64);
+
       h5 {
         font-weight: 600;
         color: rgba($tertiaryText, 0.64);
-      }
-
-      &:first-child {
-        margin-left: 0.375rem;
-        flex: 4.8;
       }
     }
 
@@ -280,49 +275,6 @@
 
   .address {
     font-weight: 400;
-  }
-
-  .withReward {
-    .header {
-      .cell {
-        &:first-child {
-          flex: 2.7;
-        }
-        &:nth-child(2),
-        &:nth-child(3) {
-          flex: 0.9;
-        }
-
-        &:nth-child(4) {
-          flex: 1;
-        }
-        &:nth-child(5) {
-          flex: 0.5;
-          justify-content: flex-end;
-          text-align: right;
-        }
-      }
-    }
-
-    .cell {
-      &:first-child {
-        flex: 4.2;
-      }
-
-      &:nth-child(2),
-      &:nth-child(3) {
-        flex: 1.3;
-      }
-
-      &:nth-child(4) {
-        flex: 1.3;
-      }
-      &:nth-child(5) {
-        flex: 1;
-        justify-content: flex-end;
-        text-align: right;
-      }
-    }
   }
 
   @include breakpoint-down-from(large-tablet) {
