--- a/src/legends/modules/rewards-pool/RewardsPool.module.scss
+++ b/src/legends/modules/rewards-pool/RewardsPool.module.scss
@@ -38,6 +38,7 @@
       .label {
         font-size: 1rem;
         font-weight: 500;
+        max-width: 8rem;
         color: $secondaryText;
       }
       .value {
