--- a/src/legends/components/Page/Page.module.scss
+++ b/src/legends/components/Page/Page.module.scss
@@ -22,6 +22,7 @@
         .sidebarButton {
           font-size: 1.25rem;
           color: $secondaryText;
+          margin-right: 1rem;
         }
 
         .account {
